--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,7 +5,7 @@ steps:
 
 - task: AzureCLI@2
   inputs:
-    azureSubscription: '$(AZURESUBSCRIPTIONVALUE)'
+    azureSubscription: '$(AzureSubscriptionValue)'
     scriptType: 'batch'
     scriptLocation: 'inlineScript'
     inlineScript: |
